<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.vjetgrouptestapp.ui.feeds.list.FeedsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.feeds.list.FeedsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_feeds"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager" />
        <!--Expanded size-->
        <!--    android:layout_width="200dp"-->
        <!--    android:layout_height="330dp"-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_bar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/feed_search_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_search"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="3dp"
                android:src="@drawable/ic_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_fav"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="5dp"
                android:src="@drawable/ic_favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/sort_by"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_search" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_sort_date"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/feed_filter_selector"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/ic_calendar"
                app:layout_constraintEnd_toStartOf="@+id/btn_sort_popularity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_sort_by"
                app:tint="@color/white_primary_selector" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_sort_popularity"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/feed_filter_selector"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/ic_popularity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_sort_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_sort_by"
                app:tint="@color/white_primary_selector" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_filter_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/filter_by"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sort_date"
                app:tint="@color/white" />

            <NumberPicker
                android:id="@+id/sources_spinner"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:theme="@style/MyAppTheme.NumberPicker"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_filter_by"
                tools:layout_editor_absoluteX="-1dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/date_from"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_date_from"
                app:layout_constraintStart_toStartOf="@+id/tv_date_from"
                app:layout_constraintTop_toBottomOf="@+id/sources_spinner" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/white_rounded_stroke"
                android:fontFamily="sans-serif-light"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="2020-07-25"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_date_to"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_date_from" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_date_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/date_to"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_date_to"
                app:layout_constraintStart_toStartOf="@+id/tv_date_to"
                app:layout_constraintTop_toTopOf="@+id/tv_title_date_from" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rounded_stroke"
                android:fontFamily="sans-serif-light"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="2020-07-25"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_date_from"
                app:layout_constraintTop_toTopOf="@+id/tv_date_from" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_ripple"
                android:fontFamily="sans-serif-light"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/apply_filter"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_reset"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_from" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_ripple"
                android:fontFamily="sans-serif-light"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/clear_filter"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_apply"
                app:layout_constraintTop_toTopOf="@+id/btn_apply" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>